# EnkiNet

./: .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/Asteroids/: CMakeLists.txt
demos/Asteroids/src/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  CollisionManager.cpp  CollisionManager.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerText.cpp  PlayerText.hpp
demos/Game/: CMakeLists.txt  Paddle.cpp  PlayerText.hpp  main.cpp
demos/Pong/: CMakeLists.txt  main.cpp
demos/Pong/src/: Ball.cpp  Ball.hpp  Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  PlayerText.cpp  PlayerText.hpp  Score.cpp  Score.hpp
demos/Shooter/: CMakeLists.txt  main.cpp
demos/Shooter/src/: CustomData.hpp  Floor.cpp  Floor.hpp  Game.cpp  Game.hpp  HealthSpawner.cpp  HealthSpawner.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
demos/Shooter/src/Managers/: Floor.cpp  Floor.hpp  InputManager.cpp  InputManager.hpp  MapManager.cpp  MapManager.hpp
src/: CMakeLists.txt  Timer.cpp  Timer.hpp  main.cpp
src/Architecture/: Entity.cpp  Entity.hpp  GameData.cpp  Scenegraph.cpp  Scenegraph.hpp
src/Architecture/Managers/: FontManager.cpp  NetworkManager.hpp
src/Architecture/Networking/: Benchmark.hpp  Network.hpp  NetworkEnet.cpp  NetworkEnet.hpp  Packet.cpp  Packet.hpp  PacketTest.hpp  RPC.hpp  RPCTest.hpp
src/Architecture/Networking/Networking/: ClientHost.cpp  ClientHost.hpp  ClientStandard.cpp  ClientStandard.hpp  ServerHost.cpp  ServerHost.hpp
src/Architecture/other Architecture/: AnimatedSprite.cpp  AnimatedSprite.hpp  Constants.hpp  Entity.hpp  GameData.cpp  GameData.hpp  Rng.cpp  Rng.hpp  State.hpp  stdafx.cpp  stdafx.h
src/Architecture/other Architecture/Audio/: AudioEngine.hpp  AudioEngineIrrklang.cpp  AudioEngineIrrklang.hpp  AudioEngineNone.cpp  AudioEngineNone.hpp  AudioEngineSFML.cpp  AudioEngineSFML.hpp  AudioLocator.cpp  AudioLocator.hpp  MusicPlayer.cpp  MusicPlayer.hpp
src/Architecture/other Architecture/Dialogues/: Actor.cpp  Actor.hpp  Dialogue.cpp  Dialogue.hpp  DialogueTree.cpp  DialogueTree.hpp
src/Architecture/other Architecture/Managers/: EntityManager.cpp  EntityManager.hpp  NetworkManager.cpp  NetworkManager.hpp  StateManager.cpp  StateManager.hpp
src/Architecture/other Architecture/Messages/: FunctionMessage.hpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp
src/Architecture/other Architecture/Networking/: Client.hpp  ClientHost.cpp  ClientHost.hpp  ClientStandard.cpp  ClientStandard.hpp  Packet.cpp  Packet.hpp  Server.hpp  ServerHost.cpp
src/Architecture/other Architecture/Signals/: Connection.cpp  Connection.hpp  Signal.hpp
src/Architecture/other Architecture/UI/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp
src/EnkiNet/: Entity.hpp  GameData.cpp  GameData.hpp  Scenegraph.cpp  Scenegraph.hpp  Timer.cpp  Timer.hpp
src/EnkiNet/Managers/: FontManager.hpp  InputManager.cpp  InputManager.hpp  NetworkManager.cpp  NetworkManager.hpp
src/EnkiNet/Networking/: Client.cpp  Client.hpp  ClientHost.cpp  ClientHost.hpp  ClientStandard.cpp  ClientStandard.hpp  Packet.cpp  Packet.hpp  RPC.hpp  RPCManager.cpp  RPCManager.hpp  Server.cpp  Server.hpp  ServerHost.cpp  ServerHost.hpp  ServerStandard.cpp  ServerStandard.hpp
src/EnkiNet/Networking/Networking/: Client.hpp  ClientHost.cpp  ClientHost.hpp  ClientStandard.cpp  ClientStandard.hpp  Server.hpp  ServerHost.cpp  ServerHost.hpp
src/EnkiNet/Signals/: Connection.hpp  Disconnector.hpp  Signal.hpp  Slot.hpp
src/Game/: Ball.cpp  Ball.hpp  Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  PlayerText.cpp  PlayerText.hpp
src/networking/: Benchmark.hpp  Packet.cpp  Packet.hpp  PacketTest.hpp  RPC.hpp  RPCTest.hpp
tests/: Benchmark.hpp  CMakeLists.txt  PacketTest.hpp  RPCTest.hpp  main.cpp
